# LAB3-trees

./: CMakeLists.txt  main.cpp
BinTree/: BinTree.cpp  BinTree.h
Complex/: Complex.cpp  Complex.h
Person/: Person.h
Sequence/: Sequence.h
Sequence/ArraySequence/: ArraySequence.cpp  ArraySequence.h
Sequence/ArraySequence/DynamicArray/: DynamicArray.cpp  DynamicArray.h
Sequence/ListSequence/: LinkedListSequence.cpp  LinkedListSequence.h
Sequence/ListSequence/LinkedList/: LinkedList.cpp  LinkedList.h
TreeNode/: TreeNode.cpp  TreeNode.h
